[project]
name = "oblivian"
version = "0.1.0"
description = "Sidecar firewall + scanner for agent tool calls"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "pydantic>=2.5",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "httpx>=0.27",
]

[project.scripts]
oblivian = "oblivian.cli:main"

[tool.uvicorn]
factory = true

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["oblivian"]
